--- a/assets/style.css
+++ b/assets/style.css
@@ -331,5 +331,5 @@ blockquote {
     left: -100%;
     z-index: 9998;
     width: calc(100% - 10px);
-    height: calc(100% - 40px);
+    height: 100%;
 }
