--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,3 +10,4 @@
 <meta name="tools-host" content="{{ site.url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/css/bootstrap-select.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
+<script data-ad-client="ca-pub-7393916064565773" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
