--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container mt-2">
-            <h4><a href="../index.html">&lt;</a> {{ page.title }}</h4>
+            <h4><a href="{{ site.url }}" class="btn btn-primary">&lt;</a> {{ page.title }}</h4>
             <p>{{ page.description }}</p>
             {{ content }}
         </div>
