--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
                     </dl>
                     <br>
                     <h4 id="word">...</h4>
-                    <h4>Posts</h4>
+                    <h4 class="mt-4">posts</h4>
                     <div class="list-group">
                         {% for post in site.posts %}
                         <a href="{{ post.url }}" class="list-group-item list-group-item-action">{{ post.title }}</a>
