--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@
                         <a href="{{ post.url }}" class="list-group-item list-group-item-action">{{ post.title }}</a>
                         {% endfor %}
                     </div>
+                    <img src="{{ site.url }}assets/by-nc-sa.png" class="mt-2">
                 </div>
                 <div class="col-md-9">
                     {% if page.links %}
