--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,20 +5,20 @@
         <title>{{ page.title }} @ {{ site.title }}</title>
     </head>
     <body>
-        <div class="container mt-2">
-            <h4><a href="{{ site.url }}" class="btn btn-primary">&lt;</a> {{ page.title }}</h4>
-            <div class="row">
+        <div class="container mb-4">
+            {% include navbar.html %}
+            <div class="row mt-2">
                 <div class="col-md-3">
                     <img src="https://crafatar.com/renders/head/1d06f8d6a27543b9abb5ad96a850f79c?size=64&overlay" alt="my head should be here" title="my head">
                     <h4>by binary1024 (aka me)</h4>
-                    <h4 class="mt-4">posts</h4>
-                    <div class="list-group">
-                        {% for post in site.posts %}
-                        <a href="{{ post.url }}" class="list-group-item list-group-item-action">{{ post.title }}</a>
+                    <dl>
+                        {% for link in site.data.links %}
+                        <dd><a href=" {{link.link }}" target="_blank">{{ link.name }}</a></dd>
                         {% endfor %}
-                    </div>
+                    </dl>
                 </div>
                 <div class="col-md-9">
+                    {{ content }}
                     {% if page.links %}
                     <div class="d-grid gap-2 d-md-block mt-2 mb-2">
                         {% for link in page.links %}
@@ -26,7 +26,6 @@
                         {% endfor %}
                     </div>
                     {% endif %}
-                    {{ content }}
                     <img src="{{ site.url }}assets/by-nc-sa.png" class="mt-2" width="88" height="31">
                 </div>
             </div>
