--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
-<link href="https://bootswatch.com/5/slate/bootstrap.min.css" rel="stylesheet">
+<link href="https://bootswatch.com/5/flatly/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
