New single page desgin

--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <div class="container">
-            {% include navbar.html %}
-            <h4 class="mt-2">{{ page.title }}</h4>
+            <h4>{{ page.title }}</h4>
             <p>{{ page.description }}</p>
             {{ content }}
         </div>
