--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
                 <h3>{{ link.title }}</h3>
                 <p>{{ link.description }}</p>
                 <br>
-                {% for url in link %}
+                {% for url in link.link %}
                 <a href="{{ url.url }}" class="media-link">{{ url.text }}</a>
                 {% endfor %}
             </div>
