--- a/assets/styles.css
+++ b/assets/styles.css
@@ -71,5 +71,6 @@ a {
 }
 
 .media-item + .media-item{
-    border-bottom: 1px solid #f3f3f3;
+    border-top: 1px solid #f3f3f3;
+    margin-top: 1.5em;
 }
