--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{{ site.url }}/assets/styles.css">
+<link rel="stylesheet" href="{{ site.url }}assets/styles.css">
 <link rel="icon" type="image/png" href="https://crafatar.com/renders/head/1d06f8d6a27543b9abb5ad96a850f79c?size=16&overlay">
 
